syntax = "proto3";
package influxdata.iox.management.v1;
option go_package = "github.com/influxdata/iox/management/v1";

// Stores a server's map of the databases it owns. The keys are the database names and the values
// are the database's location in object storage.
message ServerConfig {
  map<string, string> databases = 1;
}
